Improve layout of search results page
MFIN-Data-Catalogue issue 280.

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -14481,24 +14481,6 @@ a > .ck-content code {
 .ck-content .facets-widget-links a:focus-within {
   text-decoration: underline;
 }
-@media only screen and (min-width: 992px) {
-  .ck-content .bcbb-search-wrapper {
-    position: relative;
-  }
-  .ck-content .bcbb-search-wrapper .bcbb-search-sidebar {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .ck-content .bcbb-search-wrapper .bcbb-search-input {
-    max-width: 58%;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .ck-content .bcbb-search-wrapper .bcbb-search-input {
-    max-width: 100%;
-  }
-}
 .ck-content .bcbb-search-wrapper .view-site-search .form-type-checkbox {
   margin-top: 0.125em;
 }
@@ -14559,46 +14541,40 @@ a > .ck-content code {
             flex-direction: row;
   }
 }
-.ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+@media only screen and (min-width: 992px) {
+  .ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
-.ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .form-item {
-  margin-right: 0;
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-item-search-api-fulltext {
   width: 100%;
 }
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions {
+  text-align: right;
+  white-space: nowrap;
+}
+.ck-content .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions > button {
+  margin: 0;
+}
 @media only screen and (min-width: 992px) {
-  .ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .form-item {
-    margin-right: 0.5em;
-    width: auto;
-  }
-  .ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .form-actions {
-    -ms-flex-preferred-size: 15em;
-        flex-basis: 15em;
+  .ck-content .search-bb-container {
+    display: grid;
+    grid-template-columns: 7fr 1fr 4fr;
+    grid-template-rows: -webkit-max-content 1fr;
+    grid-template-rows: max-content 1fr;
+    grid-template-areas: "search-block . sidebar-right" "results      . sidebar-right" "results      . sidebar-right";
   }
 }
-.ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .form-actions {
-  margin-top: 0;
+.ck-content .search-bb-search-block {
+  grid-area: search-block;
 }
-.ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .button:first-child {
-  margin-right: 0.125em;
+.ck-content .search-bb-results {
+  grid-area: results;
 }
-.ck-content .block-views-exposed-filter-blocksite-search-block-1 > form .form--inline .button:last-child {
-  margin-left: 0.125em;
+.ck-content .search-bb-sidebar-right {
+  grid-area: sidebar-right;
 }
 .ck-content .block-bcbb-search {
   position: relative;
