--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -35,7 +35,7 @@
 @font-face {
   font-display: block;
   font-family: "bootstrap-icons";
-  src: url("../assets/bootstrap-icons/fonts/bootstrap-icons.woff2") format("woff2"), url("../assets/bootstrap-icons/fonts/bootstrap-icons.woff") format("woff");
+  src: url("../../../../../themes/contrib/bcbb_theme/assets/bootstrap-icons/fonts/bootstrap-icons.woff2") format("woff2"), url("../../../../../themes/contrib/bcbb_theme/assets/bootstrap-icons/fonts/bootstrap-icons.woff") format("woff");
 }
 .ck-content :root {
   --bs-tertiary-color: #757779 !important;
