--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,7 @@
   './components/search',
   './components/lists',
   './components/subway',
+  './components/toc',
   './components/collapse',
   './components/nav_book',
   './components/buttons_links',
