--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,10 @@ $colorBrand-primary: #003366;
 $colorBrand-secondary: #fcba19;
 $colorBrand-secondary-a11y: #CA8800;
 
+// B.C. brand variants
+
+$colorBrand-secondary-light: #ffecbd;
+
 // backgrounds
 $colorAccent-primary: #38598a;
 $colorAccent-secondary: #f2f2f2;
@@ -34,7 +38,6 @@ $colorTextLink-darkmode: #70B1ED;
 $colorTextLink-darkmode-variant: #9982ff;
 
 // helper colours
-
 $colorCurrent: currentColor;
 
 // components
